<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.sunrise.epark.activity.AboutUsActivity" >

    <LinearLayout
        android:id="@+id/lay_head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/main_color" >

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_selector"
            android:clickable="false"
            android:gravity="center" >

            <ImageView
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/arrow_left" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aboutus"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/about_text1"
            android:textColor="#7A7A7A"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/about_text2"
            android:textColor="#7A7A7A"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/about_text3"
            android:textColor="#7A7A7A"
            android:textSize="16sp" />
    </LinearLayout>

    <com.ant.liao.GifView
         android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/lay_head"
        android:enabled="false"/>
    
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_logo" />

    <TextView
        android:id="@+id/about_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/about_company"
        android:textColor="#7A7A7A"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/about_company"
        android:gravity="center"
        android:text="@string/about_copyright"
        android:textColor="#7A7A7A"
        android:textSize="16sp" />

</RelativeLayout>