<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

   <LinearLayout 
       android:background="@drawable/button_bottom_sure"
       android:layout_height="161dp"
       android:layout_width="fill_parent"
       android:layout_marginLeft="25dp"
       android:layout_marginRight="25dp"
       android:layout_gravity="center_horizontal"
       android:orientation="vertical"
       >
       
    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/sub_cancel_title"
        android:textColor="@color/text_color_light"
        android:textSize="20sp" />

    <!-- 邮递地址 -->

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="vertical" >

            <TextView
                android:id="@+id/tv1"
                android:layout_width="270dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                android:text="@string/ti1"
                android:textColor="@color/text_color"
                android:textSize="18sp" >

        </TextView>
        
            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                android:text="@string/ti2"
                android:textColor="@color/text_color"
                android:textSize="18sp" >

        </TextView>
        </LinearLayout>
	 <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bark_gray" />
	 
	 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        <Button
              android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@null"
            android:textColor="@color/text_color_light"
            android:text="@string/yes" />
    </LinearLayout>
	 
	 
	 
	</LinearLayout>
	
</LinearLayout>