<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sub_cancel_title"
        android:textColor="#666666"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sub_canpop_tip"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
       
        android:textColor="#999999"
        android:textSize="18sp" />
    <!-- 订单金额 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/sub_cancel_t_m"
                android:textColor="#999999"
                android:textSize="18sp" />

            <TextView
                 android:id="@+id/sub_canpop_t"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical"
                android:text="@string/how_yuan"
                android:textColor="#999999"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center_vertical|right"
                    android:text="@string/sub_cancel_f_m"
                    android:textColor="#999999"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                 android:id="@+id/sub_canpop_f"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/how_yuan"
                android:textColor="#999999"
                android:textSize="18sp" />
        </LinearLayout>
        <!-- 边框线 -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/bark_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/sub_cancel_a_m"
                android:textColor="#999999"
                android:textSize="18sp" />

            <TextView
                 android:id="@+id/sub_canpop_a"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical"
                android:text="@string/how_yuan"
                android:textColor="#999999"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
    <!-- 边框线 -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/bark_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sub_canpop_no"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/gray_cover"
            android:textSize="20sp"
            android:text="@string/no" />

        <TextView
            android:layout_width="1px"
            android:layout_height="45dp"
            android:background="@color/bark_gray" />

        <Button
              android:id="@+id/sub_canpop_yes"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/gray_cover"
            android:text="@string/yes" />
    </LinearLayout>

</LinearLayout>