<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

     <LinearLayout 
       android:background="@drawable/button_bottom_sure"
       android:layout_height="142dp"
       android:layout_width="match_parent"
       android:layout_marginLeft="25dp"
       android:layout_marginRight="25dp"
       android:layout_gravity="center_horizontal"
       android:orientation="vertical"
       >
       
    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:text="@string/sub_cancel_title"
        android:textColor="@color/text_color_light"
        android:textSize="20sp" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:paddingTop="3dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/please_Login"
                android:textColor="@color/text_color"
                android:textSize="18sp" >
        </TextView>

	 <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />
	 
        <Button
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:text="@string/yes"
            android:textColor="@color/text_color_light"
            android:textSize="20sp" />
	 
	</LinearLayout>
	
</LinearLayout>